rework code to tie in button event listeners to game logic function, add div to display who won

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button id="rock" class="btn">Rock</button>
+    <button id="paper" class="btn">Paper</button>
+    <button id="scissors" class="btn">Scissors</button>
+
+    <div id="result"></div>
     
     <script src="script.js"></script>
 </body>
