add print method for result

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button id="scissors" class="btn">Scissors</button>
 
     <div id="result"></div>
+    <div class="score">Your score: <span id="playerScore"></span></div>
+    <div class="score">Computer score: <span id="computerScore"></span></div>
     
     <script src="script.js"></script>
 </body>
